View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022962 | Open CASCADE | OCCT:Data Exchange | public | 2012-01-31 15:48 | 2012-07-09 10:25 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.5.2 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022962: Invalid realization of reading and writing material in STEP. | ||||
Description | Invalid realization of reading and writing material in STEP. | ||||
Steps To Reproduce | Bug on reading can be reproduced in DRAWEXE. If material was not read from attached file by command ReadStep D1 dm1-oc-214.stp | ||||
Tags | No tags attached. | ||||
Test case number | chl 934 P7 | ||||
parent of | 0023251 | closed | Crash during reading materials from STEP file for case when name of material is not set. |
2012-01-31 15:52 developer |
dm1-oc-214.stp (150,710 bytes) |
|
“SVN branch http://svn/svn/occt/branches/OCC22962 [^] is ready to be reviewed |
|
No comments |
|
Dear BugMaster, Workbench KAS:dev:apn-22962-occt was created from SVN branch http://svn/svn/occt/branches/OCC22962 (and apn-22962-products from trunk) and compiled on Linux and Windows platforms. There are not regressions in apn-22962-products regarding to KAS:dev:products-20120127-opt There is unstable test: che 003 C3 (It's unstable 'cause launching it in EMAX we get good results "This shape seems to be valid") Test case for this fix is chl 934 P7. It's OK. See results in /QADisk/occttests/results/KAS/dev/ apn-22962-products_02022012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120127-opt_28012012/lin See test cases in /QADisk/occttests/tests/ED |
|
P7 (563 bytes) |
|
Integrated into trunk of occt repository Date: 2012-02-03 16:35:42 +0400 (Fri, 03 Feb 2012) New Revision: 10302 Modified: trunk/src/STEPCAFControl/STEPCAFControl_Reader.cxx trunk/src/STEPCAFControl/STEPCAFControl_Writer.cxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-01-31 15:48 |
|
New Issue | |
2012-01-31 15:48 |
|
Assigned To | => gka |
2012-01-31 15:52 |
|
File Added: dm1-oc-214.stp | |
2012-01-31 17:34 |
|
Status | new => assigned |
2012-01-31 17:36 |
|
Note Added: 0019324 | |
2012-01-31 17:36 |
|
Assigned To | gka => pdn |
2012-01-31 17:36 |
|
Status | assigned => resolved |
2012-02-01 13:13 |
|
Note Added: 0019330 | |
2012-02-01 13:13 |
|
Assigned To | pdn => gka |
2012-02-01 13:13 |
|
Status | resolved => reviewed |
2012-02-03 15:26 | apn | Note Added: 0019381 | |
2012-02-03 15:27 | apn | File Added: P7 | |
2012-02-03 15:28 | apn | Test case number | => chl 934 P7 |
2012-02-03 15:28 | apn | Status | reviewed => tested |
2012-02-03 16:51 | bugmaster | Note Added: 0019388 | |
2012-02-03 16:51 | bugmaster | Status | tested => verified |
2012-02-03 16:51 | bugmaster | Resolution | open => fixed |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 1d2b1ccb |
2012-07-09 10:25 |
|
Relationship added | parent of 0023251 |