0022962: Invalid realization of reading and writing material in STEP.